--- a/static_in_env/blog/css/custom-style.css
+++ b/static_in_env/blog/css/custom-style.css
@@ -1,19 +1,24 @@
 /*  */
-body{
-    font-size: 16px;
 
+body {
+    font-size: 16px;
 }
+
 .row-wrap {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    /* align-items: center; */
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: flex-start;
+}
+
+.flex-start {
+    justify-content: flex-start;
 }
 
 .block {
-    width: 120px;
-    height: 120px;
+    width: 40px;
+    height: 40px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -21,66 +26,57 @@ body{
     margin: 12px;
 }
 
-
 .block.block__nav--primary {
     background-color: #55acee;
-
 }
 
-.block__nav--secondary{
-    background-color:#7FDBFF ;
-}
-
-.block__nav--success{
+.block__nav--secondary {
     background-color: #7FDBFF;
 }
 
-.block__nav--danger{
+.block__nav--success {
+    background-color: #7FDBFF;
+}
+
+.block__nav--danger {
     background-color: tomato;
 }
 
-.block__nav--warning{
+.block__nav--warning {
     background-color: yellow;
 }
 
-.block__nav--info{
+.block__nav--info {
     background-color: turquoise;
 }
 
-
-.text--primary{
+.text--primary {
     font-size: 22px;
 }
-.text--secondary{
-    font-size: 18px;
+
+.text--secondary {
+    font-size: 12px;
 }
-.text--success{
+
+.text--success {
     font-size: 16px;
 }
 
-.block__nav--hover:hover{
+.block__nav--hover:hover {
     width: 140px;
     background-color: #8EC5FC;
     background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
-    
 }
 
-
-.box-shadow{
-    box-shadow:
-  0 2.8px 2.2px rgba(0, 0, 0, 0.034),
-  0 6.7px 5.3px rgba(0, 0, 0, 0.048),
-  0 12.5px 10px rgba(0, 0, 0, 0.06),
-  0 22.3px 17.9px rgba(0, 0, 0, 0.072),
-  0 41.8px 33.4px rgba(0, 0, 0, 0.086),
-  0 100px 80px rgba(0, 0, 0, 0.12)
+.box-shadow {
+    box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034), 0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06), 0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086), 0 100px 80px rgba(0, 0, 0, 0.12)
 }
 
-.border-radius{
+.border-radius {
     border-radius: 12px;
 }
 
-.block.block__border--radius12{
+.block.block__border--radius12 {
     border-radius: 12px;
 }
 
@@ -122,4 +118,72 @@ body{
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.post_comments p label {
+    width: 80px;
+}
+
+.post_comments form p label {
+    width: 80px;
+    font-size: 22px;
+}
+
+
+
+
+.dropbtn {
+    background-color: #139bea;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {background-color: #f1f1f1}
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
+  .dropdown:hover .dropbtn {
+    background-color: #c87a39;
+}
+
+.form__wrap{
+    margin-top: 6px;
+    margin-bottom: 6px;
+}
+.form__wrap > button {
+    width: 80px;
+    text-align: center;
+    padding: 4px;
+    font-size: 12px;
+}
+
+.form_search_wrap{
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
