--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -1,44 +1,10 @@
 {% extends 'blog/layout/base.html' %}
 {% load static %}
+{% load blog_tags %}
 
 {% block content %}
 
 
-<div class="block block__nav--primary block__nav--hover box-shadow border-radius">
-    <a href="#">
-        <span class="badge bg-secondary text--secondary">
-            Lập trình
-        </span>
-
-    </a>
-</div>
-<div class="block block__nav--secondary block__nav--hover box-shadow border-radius">
-    <span class="badge bg-secondary text--secondary">
-        Công Nghệ
-    </span>
-</div>
-<div class="block block__nav--success block__nav--hover box-shadow border-radius">
-    <span class="badge bg-secondary text--secondary">
-        Tiếng Anh
-    </span>
-</div>
-<div class="block block__nav--danger block__nav--hover box-shadow border-radius">
-    <span class="badge bg-secondary text--secondary">
-        Khoa Học
-    </span>
-</div>
-<div class="block block__nav--warning block__nav--hover box-shadow border-radius">
-    <span class="badge bg-secondary text--secondary">
-        Tự Nhiên
-    </span>
-</div>
-<div class="block block__nav--info block__nav--hover box-shadow border-radius">
-    <span class="badge bg-secondary text--secondary">
-        Ebook
-    </span>
-</div>
-
-</div>
 
 
 <div class="container">
@@ -48,29 +14,36 @@
 
 
                 <div class="blog-list clearfix">
+
+                    {% for post in posts %}
                     <div class="blog-box row">
                         <div class="col-md-4">
                             <div class="post-media">
                                 <a href="tech-single.html" title="">
-                                    <img src=" {% static 'blog/upload/tech_blog_01.jpg' %}" alt="" class="img-fluid">
+                                    <img src="{{post.image.url}}" alt="" class="img-fluid">
                                     <div class="hovereffect"></div>
                                 </a>
                             </div><!-- end media -->
                         </div><!-- end col -->
 
                         <div class="blog-meta big-meta col-md-8">
-                            <h4><a href="tech-single.html" title="">Top 10 phone applications and 2017 mobile design
-                                    awards</a></h4>
-                            <p>Aenean interdum arcu blandit, vehicula magna non, placerat elit. Mauris et
-                                pharetratortor. Suspendissea sodales urna. In at augue elit. Vivamus enim nibh, maximus
-                                ac felis nec, maximus tempor odio.</p>
-                            <small class="firstsmall"><a class="bg-orange" href="tech-category-01.html"
-                                    title="">Gadgets</a></small>
-                            <small><a href="tech-single.html" title="">21 July, 2017</a></small>
-                            <small><a href="tech-author.html" title="">by Matilda</a></small>
-                            <small><a href="tech-single.html" title=""><i class="fa fa-eye"></i> 1114</a></small>
+                            <h4><a href="{{post.get_absolute_url}}" title="">{{post.title}}</a></h4>
+                            <p>{{post.summary}}</p>
+                            <p>
+                                <small class="firstsmall">
+                                    {% for tag in post.tags.all %}
+                                    <a class="bg-orange m-1" href="{% url 'blog:post_list_by_tag' tag.slug %}" title="">
+                                        {{tag.name}}
+                                    </a>
+                                    {% endfor %}
+                                </small>
+                            </p>
+                            <small><a href="tech-single.html" title="">{{post.created_at}}</a></small>
+                            <small><a href="tech-author.html" title="">{{post.author}}</a></small>
+                            <small><a href="tech-single.html" title=""><i class="fa fa-eye"></i> {{post.views}}</a></small>
                         </div><!-- end meta -->
                     </div><!-- end blog-box -->
+                    {% endfor %}
 
                     <hr class="invis">
 
@@ -97,150 +70,37 @@
 
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
             <div class="sidebar">
-                <div class="widget">
-                    <div class="banner-spot clearfix">
-                        <div class="banner-img">
-                            <img src="upload/banner_07.jpg" alt="" class="img-fluid">
-                        </div><!-- end banner-img -->
-                    </div><!-- end banner -->
-                </div><!-- end widget -->
+                <p>
+                    <a href="{% url 'blog:post_feed' %}">Subcribe to my RSS feed.</a>
+                </p>
+
+                <form class="d-flex form__wrap" method="POST" action="{% url 'blog:post_search'  %}">
+                    {% csrf_token %}
+                    <input class="form-control" name="search_value" type="search" placeholder="Tìm kiếm..." aria-label="Search">
+                    <button class="btn btn-success" type="submit">Tìm kiếm</button>
+                </form>
+
+
+                {% show_latest_posts 3 %}
+
 
                 <div class="widget">
-                    <h2 class="widget-title">Trend Videos</h2>
-                    <div class="trend-videos">
-                        <div class="blog-box">
-                            <div class="post-media">
-                                <a href="tech-single.html" title="">
-                                    <img src="upload/tech_video_01.jpg" alt="" class="img-fluid">
-                                    <div class="hovereffect">
-                                        <span class="videohover"></span>
-                                    </div><!-- end hover -->
-                                </a>
-                            </div><!-- end media -->
-                            <div class="blog-meta">
-                                <h4><a href="tech-single.html" title="">We prepared the best 10 laptop presentations for
-                                        you</a></h4>
-                            </div><!-- end meta -->
-                        </div><!-- end blog-box -->
-
-                        <hr class="invis">
-
-                        <div class="blog-box">
-                            <div class="post-media">
-                                <a href="tech-single.html" title="">
-                                    <img src="upload/tech_video_02.jpg" alt="" class="img-fluid">
-                                    <div class="hovereffect">
-                                        <span class="videohover"></span>
-                                    </div><!-- end hover -->
-                                </a>
-                            </div><!-- end media -->
-                            <div class="blog-meta">
-                                <h4><a href="tech-single.html" title="">We are guests of ABC Design Studio - Vlog</a>
-                                </h4>
-                            </div><!-- end meta -->
-                        </div><!-- end blog-box -->
-
-                        <hr class="invis">
-
-                        <div class="blog-box">
-                            <div class="post-media">
-                                <a href="tech-single.html" title="">
-                                    <img src="upload/tech_video_03.jpg" alt="" class="img-fluid">
-                                    <div class="hovereffect">
-                                        <span class="videohover"></span>
-                                    </div><!-- end hover -->
-                                </a>
-                            </div><!-- end media -->
-                            <div class="blog-meta">
-                                <h4><a href="tech-single.html" title="">Both blood pressure monitor and intelligent
-                                        clock</a></h4>
-                            </div><!-- end meta -->
-                        </div><!-- end blog-box -->
-                    </div><!-- end videos -->
-                </div><!-- end widget -->
-
-                <div class="widget">
-                    <h2 class="widget-title">Popular Posts</h2>
+                    <h2 class="widget-title">Bình luận nhiều nhất</h2>
                     <div class="blog-list-widget">
+                        {% get_most_commented_posts as most_commented_posts %}
+
                         <div class="list-group">
-                            <a href="tech-single.html"
-                                class="list-group-item list-group-item-action flex-column align-items-start">
-                                <div class="w-100 justify-content-between">
-                                    <img src="upload/tech_blog_08.jpg" alt="" class="img-fluid float-left">
-                                    <h5 class="mb-1">5 Beautiful buildings you need..</h5>
-                                    <small>12 Jan, 2016</small>
-                                </div>
-                            </a>
-
-                            <a href="tech-single.html"
-                                class="list-group-item list-group-item-action flex-column align-items-start">
-                                <div class="w-100 justify-content-between">
-                                    <img src="upload/tech_blog_01.jpg" alt="" class="img-fluid float-left">
-                                    <h5 class="mb-1">Let's make an introduction for..</h5>
-                                    <small>11 Jan, 2016</small>
-                                </div>
-                            </a>
-
-                            <a href="tech-single.html"
-                                class="list-group-item list-group-item-action flex-column align-items-start">
-                                <div class="w-100 last-item justify-content-between">
-                                    <img src="upload/tech_blog_03.jpg" alt="" class="img-fluid float-left">
-                                    <h5 class="mb-1">Did you see the most beautiful..</h5>
-                                    <small>07 Jan, 2016</small>
-                                </div>
-                            </a>
-                        </div>
-                    </div><!-- end blog-list -->
-                </div><!-- end widget -->
-
-                <div class="widget">
-                    <h2 class="widget-title">Recent Reviews</h2>
-                    <div class="blog-list-widget">
-                        <div class="list-group">
-                            <a href="tech-single.html"
+                            {% for post in most_commented_posts %}
+                            <a href="{{ post.get_absolute_url }}"
                                 class="list-group-item list-group-item-action flex-column align-items-start">
                                 <div class="w-100 justify-content-between">
                                     <img src="upload/tech_blog_02.jpg" alt="" class="img-fluid float-left">
-                                    <h5 class="mb-1">Banana-chip chocolate cake recipe..</h5>
-                                    <span class="rating">
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                    </span>
-                                </div>
-                            </a>
+                                    <h5 class="mb-1"> {{forloop.counter}} {{post.title}}</h5>
 
-                            <a href="tech-single.html"
-                                class="list-group-item list-group-item-action flex-column align-items-start">
-                                <div class="w-100 justify-content-between">
-                                    <img src="upload/tech_blog_03.jpg" alt="" class="img-fluid float-left">
-                                    <h5 class="mb-1">10 practical ways to choose organic..</h5>
-                                    <span class="rating">
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                    </span>
                                 </div>
                             </a>
+                            {% endfor %}
 
-                            <a href="tech-single.html"
-                                class="list-group-item list-group-item-action flex-column align-items-start">
-                                <div class="w-100 last-item justify-content-between">
-                                    <img src="upload/tech_blog_07.jpg" alt="" class="img-fluid float-left">
-                                    <h5 class="mb-1">We are making homemade ravioli..</h5>
-                                    <span class="rating">
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                    </span>
-                                </div>
-                            </a>
                         </div>
                     </div><!-- end blog-list -->
                 </div><!-- end widget -->
