--- a/templates/blog/layout/base.html
+++ b/templates/blog/layout/base.html
@@ -1,4 +1,7 @@
+
 {% load i18n static %}
+{% load blog_tags %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -53,93 +56,12 @@
 <body>
 
     <div id="wrapper">
-        <header class="tech-header header">
-            <div class="container-fluid">
-                <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
-                    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-                        data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <a class="navbar-brand" href="tech-index.html"><img
-                            src=" {% static 'blog/images/version/tech-logo.png' %}" alt=""></a>
-                    <div class="collapse navbar-collapse" id="navbarCollapse">
-                        <ul class="navbar-nav mr-auto">
-                            <li class="nav-item">
-                                <a class="nav-link" href="tech-index.html">Home</a>
-                            </li>
-                            <li
-                                class="nav-item dropdown has-submenu menu-large hidden-md-down hidden-sm-down hidden-xs-down">
-                                <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown"
-                                    aria-haspopup="true" aria-expanded="false">News</a>
-                                <ul class="dropdown-menu megamenu" aria-labelledby="dropdown01">
-                                    <li>
-                                        <div class="container">
-                                            <div class="mega-menu-content clearfix">
-
-
-                                                <div class="tab-details clearfix">
-                                                    <div id="cat01" class="tabcontent active">
-                                                        <div class="row">
-                                                            <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-                                                                <div class="blog-box">
-                                                                    <div class="post-media">
-                                                                        <a href="tech-single.html" title="">
-                                                                            <img src="{% static 'blog/upload/tech_menu_01.jpg' %} "
-                                                                                alt="" class="img-fluid">
-                                                                            <div class="hovereffect">
-                                                                            </div><!-- end hover -->
-                                                                            <span class="menucat">Science</span>
-                                                                        </a>
-                                                                    </div><!-- end media -->
-                                                                    <div class="blog-meta">
-                                                                        <h4><a href="tech-single.html" title="">Top 10+
-                                                                                care advice for your toenails</a></h4>
-                                                                    </div><!-- end meta -->
-                                                                </div><!-- end blog-box -->
-                                                            </div>
-
-                                                        </div><!-- end row -->
-                                                    </div>
-                                                </div><!-- end tab-details -->
-                                            </div><!-- end mega-menu-content -->
-                                        </div>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="tech-category-01.html">Gadgets</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="tech-category-02.html">Videos</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="tech-category-03.html">Reviews</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="tech-contact.html">Contact Us</a>
-                            </li>
-                        </ul>
-                        <ul class="navbar-nav mr-2">
-                            <li class="nav-item">
-                                <a class="nav-link" href="#"><i class="fa fa-rss"></i></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#"><i class="fa fa-android"></i></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#"><i class="fa fa-apple"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
-            </div><!-- end container-fluid -->
-        </header><!-- end market-header -->
+        <!-- navbar header -->
+        {% show_navbar %}
 
         <!-- Nav Topic -->
         <section class="section">
 
-            <div class="row-wrap">
 
                
             {% block content %}
@@ -149,81 +71,18 @@
 
 
         <footer class="footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-7">
-                        <div class="widget">
-                            <div class="footer-text text-left">
-                                <a href="index.html"><img src="images/version/tech-footer-logo.png" alt=""
-                                        class="img-fluid"></a>
-                                <p>Tech Blog is a technology blog, we sharing marketing, news and gadget articles.</p>
-                                <div class="social">
-                                    <a href="#" data-toggle="tooltip" data-placement="bottom" title="Facebook"><i
-                                            class="fa fa-facebook"></i></a>
-                                    <a href="#" data-toggle="tooltip" data-placement="bottom" title="Twitter"><i
-                                            class="fa fa-twitter"></i></a>
-                                    <a href="#" data-toggle="tooltip" data-placement="bottom" title="Instagram"><i
-                                            class="fa fa-instagram"></i></a>
-                                    <a href="#" data-toggle="tooltip" data-placement="bottom" title="Google Plus"><i
-                                            class="fa fa-google-plus"></i></a>
-                                    <a href="#" data-toggle="tooltip" data-placement="bottom" title="Pinterest"><i
-                                            class="fa fa-pinterest"></i></a>
-                                </div>
-
-                                <hr class="invis">
-
-                                <div class="newsletter-widget text-left">
-                                    <form class="form-inline">
-                                        <input type="text" class="form-control" placeholder="Enter your email address">
-                                        <button type="submit" class="btn btn-primary">SUBMIT</button>
-                                    </form>
-                                </div><!-- end newsletter -->
-                            </div><!-- end footer-text -->
-                        </div><!-- end widget -->
-                    </div><!-- end col -->
-
-                    <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-                        <div class="widget">
-                            <h2 class="widget-title">Popular Categories</h2>
-                            <div class="link-widget">
-                                <ul>
-                                    <li><a href="#">Marketing <span>(21)</span></a></li>
-                                    <li><a href="#">SEO Service <span>(15)</span></a></li>
-                                    <li><a href="#">Digital Agency <span>(31)</span></a></li>
-                                    <li><a href="#">Make Money <span>(22)</span></a></li>
-                                    <li><a href="#">Blogging <span>(66)</span></a></li>
-                                </ul>
-                            </div><!-- end link-widget -->
-                        </div><!-- end widget -->
-                    </div><!-- end col -->
-
-                    <div class="col-lg-2 col-md-12 col-sm-12 col-xs-12">
-                        <div class="widget">
-                            <h2 class="widget-title">Copyrights</h2>
-                            <div class="link-widget">
-                                <ul>
-                                    <li><a href="#">About us</a></li>
-                                    <li><a href="#">Advertising</a></li>
-                                    <li><a href="#">Write for us</a></li>
-                                    <li><a href="#">Trademark</a></li>
-                                    <li><a href="#">License & Help</a></li>
-                                </ul>
-                            </div><!-- end link-widget -->
-                        </div><!-- end widget -->
-                    </div><!-- end col -->
-                </div>
+           
 
                 <div class="row">
                     <div class="col-md-12 text-center">
                         <br>
-                        <div class="copyright">&copy; Tech Blog. Design: <a href="http://html.design">HTML Design</a>.
+                        <div class="copyright">&copy; Blog. Design by <a href="#">ThuanTruong</a>.
                         </div>
                     </div>
                 </div>
             </div><!-- end container -->
         </footer><!-- end footer -->
 
-        <div class="dmtop">Scroll to Top</div>
 
     </div><!-- end wrapper -->
 
