--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -10,11 +10,8 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
-            <div class="page-wrapper">
-
-
+            <div class="page-wrapper mt-4">
                 <div class="blog-list clearfix">
-
                     {% for post in posts %}
                     <div class="blog-box row">
                         <div class="col-md-4">
@@ -52,9 +49,11 @@
 
             <hr class="invis">
 
+            {% include "blog/pagination.html" with page=posts %}
+
             <div class="row">
                 <div class="col-md-12">
-                    <nav aria-label="Page navigation">
+                    <!-- <nav aria-label="Page navigation">
                         <ul class="pagination justify-content-start">
                             <li class="page-item"><a class="page-link" href="#">1</a></li>
                             <li class="page-item"><a class="page-link" href="#">2</a></li>
@@ -63,16 +62,14 @@
                                 <a class="page-link" href="#">Next</a>
                             </li>
                         </ul>
-                    </nav>
+                    </nav> -->
                 </div><!-- end col -->
             </div><!-- end row -->
         </div><!-- end col -->
 
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-            <div class="sidebar">
-                <p>
-                    <a href="{% url 'blog:post_feed' %}">Subcribe to my RSS feed.</a>
-                </p>
+            <div class="sidebar mt-4">
+            
 
                 <form class="d-flex form__wrap" method="POST" action="{% url 'blog:post_search'  %}">
                     {% csrf_token %}
@@ -105,39 +102,7 @@
                     </div><!-- end blog-list -->
                 </div><!-- end widget -->
 
-                <div class="widget">
-                    <h2 class="widget-title">Follow Us</h2>
-
-                    <div class="row text-center">
-                        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
-                            <a href="#" class="social-button facebook-button">
-                                <i class="fa fa-facebook"></i>
-                                <p>27k</p>
-                            </a>
-                        </div>
-
-                        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
-                            <a href="#" class="social-button twitter-button">
-                                <i class="fa fa-twitter"></i>
-                                <p>98k</p>
-                            </a>
-                        </div>
-
-                        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
-                            <a href="#" class="social-button google-button">
-                                <i class="fa fa-google-plus"></i>
-                                <p>17k</p>
-                            </a>
-                        </div>
-
-                        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
-                            <a href="#" class="social-button youtube-button">
-                                <i class="fa fa-youtube"></i>
-                                <p>22k</p>
-                            </a>
-                        </div>
-                    </div>
-                </div><!-- end widget -->
+               
 
                 <div class="widget">
                     <div class="banner-spot clearfix">
