--- a/templates/blog/layout/navbar.html
+++ b/templates/blog/layout/navbar.html
@@ -35,7 +35,7 @@
                 </ul>
                 <ul class="navbar-nav mr-2">
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fa fa-rss"></i></a>
+                        <a class="nav-link" href="{% url 'blog:post_feed' %}"><i class="fa fa-rss"></i></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#"><i class="fa fa-android"></i></a>
