--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -9,7 +9,7 @@
 
 
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
-            <div class="page-wrapper">
+            <div class="page-wrapper mt-4">
                 <div class="blog-grid-system">
                     <div class="row">
 
