--- a/static_in_env/blog/css/custom-style.css
+++ b/static_in_env/blog/css/custom-style.css
@@ -129,9 +129,6 @@ body {
     font-size: 22px;
 }
 
-
-
-
 .dropbtn {
     background-color: #139bea;
     color: white;
@@ -139,51 +136,55 @@ body {
     font-size: 16px;
     border: none;
     cursor: pointer;
-  }
-  
-  .dropdown {
+    min-width: 180px;
+}
+
+.dropdown {
     position: relative;
     display: inline-block;
-  }
-  
-  .dropdown-content {
+}
+
+.dropdown-content {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
-  }
-  
-  .dropdown-content a {
+    min-width: 180px;
+}
+
+.dropdown-content a {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-  }
-  
-  .dropdown-content a:hover {background-color: #f1f1f1}
-  
-  .dropdown:hover .dropdown-content {
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1
+}
+
+.dropdown:hover .dropdown-content {
     display: block;
-  }
-  
-  .dropdown:hover .dropbtn {
+}
+
+.dropdown:hover .dropbtn {
     background-color: #c87a39;
 }
 
-.form__wrap{
+.form__wrap {
     margin-top: 6px;
     margin-bottom: 6px;
 }
-.form__wrap > button {
+
+.form__wrap>button {
     width: 80px;
     text-align: center;
     padding: 4px;
     font-size: 12px;
 }
 
-.form_search_wrap{
+.form_search_wrap {
     margin-top: 20px;
     margin-bottom: 20px;
 }
