--- a/templates/blog/layout/navbar.html
+++ b/templates/blog/layout/navbar.html
@@ -37,12 +37,12 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'blog:post_feed' %}"><i class="fa fa-rss"></i></a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="#"><i class="fa fa-android"></i></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#"><i class="fa fa-apple"></i></a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </nav>
