fixed css and add blog to absolute url

--- a/templates/blog/layout/navbar.html
+++ b/templates/blog/layout/navbar.html
@@ -9,7 +9,7 @@
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="/blog">
+            <a class="navbar-brand" href="{% url 'blog:blog' %}">
                 <img
                     src=" {% static 'blog/images/version/logo1.png' %}" alt=""
                     style="width: 100px;"
