--- a/templates/blog/layout/base.html
+++ b/templates/blog/layout/base.html
@@ -73,14 +73,11 @@
         <footer class="footer">
            
 
-                <div class="row">
-                    <div class="col-md-12 text-center">
+                    <div class="text-center">
                         <br>
                         <div class="copyright">&copy; Blog. Design by <a href="#">ThuanTruong</a>.
-                        </div>
+
                     </div>
-                </div>
-            </div><!-- end container -->
         </footer><!-- end footer -->
 
 
