--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -17,7 +17,7 @@
     </a>
     {% endfor %}
 
-    <div style="background-color: antiquewhite;padding: 8px;">
+    <div class="main-content">
         {{post.content.html|safe}}
 
     </div>
