--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -16,8 +16,8 @@
                     <div class="blog-box row">
                         <div class="col-md-4">
                             <div class="post-media">
-                                <a href="tech-single.html" title="">
-                                    <img src="{{post.image.url}}" alt="" class="img-fluid">
+                                <a href="{{ post.get_absolute_url }}" title="">
+                                    <img src="{{post.image.url}}" alt="" class="img-fluid" style="height: 220px;" >
                                     <div class="hovereffect"></div>
                                 </a>
                             </div><!-- end media -->
@@ -25,7 +25,7 @@
 
                         <div class="blog-meta big-meta col-md-8">
                             <h4><a href="{{post.get_absolute_url}}" title="">{{post.title}}</a></h4>
-                            <p>{{post.summary}}</p>
+                            <p>{{post.summary|truncatewords_html:40}}</p>
                             <p>
                                 <small class="firstsmall">
                                     {% for tag in post.tags.all %}
@@ -35,7 +35,7 @@
                                     {% endfor %}
                                 </small>
                             </p>
-                            <small><a href="tech-single.html" title="">{{post.created_at}}</a></small>
+                            <small><a href="tech-single.html" title="">{{post.created_at|date}}</a></small>
                             <small><a href="tech-author.html" title="">{{post.author}}</a></small>
                             <small><a href="tech-single.html" title=""><i class="fa fa-eye"></i> {{post.views}}</a></small>
                         </div><!-- end meta -->
