--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -17,9 +17,10 @@
                         <div class="col-md-6">
                             <div class="blog-box">
                                 <div class="post-media">
-                                    <a href="tech-single.html" title="">
+                                    <a href="{{ post.get_absolute_url }}" title="{{ post.title }}">
                                         <img src="{{ post.image.url }}"
-                                            style="width: '100%';height: 220px;object-fit: cover;" alt=""
+                                            style="width: '100%';height: 220px;object-fit: cover;" 
+                                            alt=""
                                             class="img-fluid">
                                         <div class="hovereffect">
                                             <span></span>
@@ -39,7 +40,7 @@
                                     </div>
 
                                     <h4><a href="{{ post.get_absolute_url }}" title="">{{post.title}}</a></h4>
-                                    <p>{{post.summary}}</p>
+                                    <p>{{post.summary|truncatewords_html:30}}</p>
                                     <small><a href="tech-single.html" title="">{{post.created_at}}</a></small>
                                     <small><a href="tech-author.html" title="">{{post.author}}</a></small>
                                     <small><a href="tech-single.html" title=""><i class="fa fa-eye"></i>{{post.views}}</a></small>
