--- a/templates/blog/layout/latest_posts.html
+++ b/templates/blog/layout/latest_posts.html
@@ -7,8 +7,8 @@
         <div class="w-100 justify-content-between">
 
           
-            <h5 class="mb-1">{{post.title}}</h5>
-            <small>{{post.created_at}}</small>
+            <p class="mb-1">{{post.title}}</p>
+            <small>{{post.created_at|date}}</small>
         </div>
     </a>
     <br>
