--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -1,5 +1,6 @@
 {% extends 'blog/layout/base.html' %}
 
+{% load blog_tags %}
 
 {% block content %}
 
@@ -8,73 +9,113 @@
 </h1>
 
 <div class="container">
+    <div class="row">
 
 
-    {% for tag in tags %}
-    <a href="{% url 'blog:post_list_by_tag' tag.slug %}">
+        <div class="col-md-10 col-sm-12">
+            {% for tag in tags %}
+            <a href="{% url 'blog:post_list_by_tag' tag.slug %}">
 
-        <span class="badge bg-success">{{tag}}</span>
-    </a>
-    {% endfor %}
+                <span class="badge bg-success">{{tag}}</span>
+            </a>
+            {% endfor %}
 
-    <div class="main-content">
-        {{post.content.html|safe}}
+            <div class="main-content">
+                {{post.content.html|safe}}
 
-    </div>
+            </div>
 
-    <div class="d-flex flex-row-reverse bd-highlight">
-        <div class="p-2 bd-highlight">{{post.author}}</div>
+            <div class="d-flex flex-row-reverse bd-highlight">
+                <div class="p-2 bd-highlight">{{post.author}}</div>
 
-    </div>
+            </div>
 
-    <div class="post_comments">
+            <div class="post_comments">
 
-        <!-- <form action="POST">
-                {{comment_form.as_p}}
-                {% csrf_token %}
-                <p>
-                    <input type="submit" value="Add comment">
+                <!-- <form action="POST">
+                        {{comment_form.as_p}}
+                        {% csrf_token %}
+                        <p>
+                            <input type="submit" value="Add comment">
+                        </p>
+                    </form>
+        
+                     -->
+                <form action="{% url 'blog:post_detail' post.slug %}" method="post">
+                    {% csrf_token %}
+
+                    <div class="mb-3">
+                        <label for="exampleFormControlInput1" class="form-label">Email</label>
+                        <input type="email" name="email" class="form-control">
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleFormControlTextarea1" class="form-label">Nội dung</label>
+                        <textarea class="form-control" name="content" rows="3"></textarea>
+                    </div>
+                    <div class="mb-3" style="display: flex;flex-direction: row;justify-content: flex-end;">
+                        <button type="submit" class="btn btn-primary">
+                            Primary
+                        </button>
+                    </div>
+
+                </form>
+
+
+            </div>
+            {% with comments.count as total_comments %}
+            <h2>{{ total_comments }} bình luận </h2>
+            {% endwith %}
+
+            {% for comment in comments %}
+            <div class="comment">
+                <p class="info">
+                    Bình luận {{forloop.counter}} bởi {{comment.email}} lúc
+                    <span class="text-muted">
+                        {{comment.created_at}}
+
+                    </span>
                 </p>
-            </form>
-
-             -->
-        <form action="{% url 'blog:post_detail' post.slug %}" method="post">
-            {% csrf_token %}
-
-            <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label">Email</label>
-                <input type="email" name="email" class="form-control" >
+                {{comment.content}}
             </div>
-            <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label">Nội dung</label>
-                <textarea class="form-control" name="content"  rows="3"></textarea>
-            </div>
-            <div class="mb-3" style="display: flex;flex-direction: row;justify-content: flex-end;">
-                <button type="submit" class="btn btn-primary">
-                    Primary
-                </button>
-            </div>
+            {% endfor %}
+        </div>
+        <!-- End left left col -->
+        <div class="col-md-2 col-sm-12">
+            <div class="sidebar mt-4">
 
-        </form>
 
+
+
+                <div class="widget">
+                    <h2 class="widget-title">Bình luận nhiều nhất</h2>
+                    <div class="blog-list-widget">
+                        {% get_most_commented_posts as most_commented_posts %}
+
+                        <div class="list-group">
+                            {% for post in most_commented_posts %}
+                            <a href="{{ post.get_absolute_url }}"
+                                class="list-group-item list-group-item-action flex-column align-items-start">
+                                <div class="w-100 justify-content-between">
+                                    <img src="upload/tech_blog_02.jpg" alt="" class="img-fluid float-left">
+                                    <h5 class="mb-1"> {{forloop.counter}} {{post.title}}</h5>
+
+                                </div>
+                            </a>
+                            {% endfor %}
+
+                        </div>
+                    </div><!-- end blog-list -->
+                </div><!-- end widget -->
+                {% show_latest_posts 8 %}
+
+
+            </div><!-- end sidebar -->
+        </div>
 
     </div>
-    {% with comments.count as total_comments %}
-        <h2>{{ total_comments }} bình luận </h2>
-    {% endwith %}
+    <!-- End Row -->
 
-    {% for comment in comments %}
-        <div class="comment">
-            <p class="info">
-                Bình luận {{forloop.counter}} bởi {{comment.email}} lúc 
-                <span class="text-muted">
-                    {{comment.created_at}}
-                    
-                </span>
-            </p>
-            {{comment.content}}
-        </div>
-    {% endfor %}
+
 
 </div>
 
