--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -17,14 +17,9 @@
                         <div class="col-md-6">
                             <div class="blog-box">
                                 <div class="post-media">
-                                    <a href="{{ post.get_absolute_url }}" title="{{ post.title }}">
-                                        <img src="{{ post.image.url }}"
-                                            style="width: '100%';height: 220px;object-fit: cover;" 
-                                            alt=""
-                                            class="img-fluid">
-                                        <div class="hovereffect">
-                                            <span></span>
-                                        </div><!-- end hover -->
+                                    <a href="{{ post.get_absolute_url }}" title="">
+                                        <img src="{{post.image.url}}" alt="" class="img-fluid" style="height: 220px;" >
+                                        <div class="hovereffect"></div>
                                     </a>
                                 </div><!-- end media -->
                                 <div class="blog-meta big-meta">
